--- a/app/src/main/res/values/Colors.xml
+++ b/app/src/main/res/values/Colors.xml
@@ -12,7 +12,7 @@
     <color name="rightAnswer">#5CA03C</color>
     <color name="wrongAnswer">#e23</color>
 	
-    <color name="buttonSelected">#787878</color>
+    <color name="buttonSelected">#9e9e9e</color>
     <color name="optionsBackround">#ffd2e6ff</color>
 	<color name="black_semi_transparent">#B2000000</color>
     <color name="background">#e5e5e5</color>
